--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,3 +75,8 @@ p:nth-child(3){
     background-color: cyan;
 }
 
+#overflow p:nth-child(2){
+    overflow: scroll;
+    background-color: pink;
+    
+}
